--- a/styles/all.css
+++ b/styles/all.css
@@ -3,18 +3,18 @@
 
 .body,html{
     background-image: url(../images/web_bg.jpg);
-    /* height: 100%; */
     font-family: "Noto Sans TC",Raleway,sans-serif,'Times New Roman', Times, serif;
     font-style: normal;
+    font-size: 16px;
     overflow-x: hidden;
     position: relative;
 }
 
 /* 選單 */
-header nav{
+header{
     background-image: url('../images/footer_two.png');
     background-size: cover;
-    padding: 0px 30px;
+    padding: 0 30px;
     display: flex;
     justify-content: space-between;
 }
@@ -22,37 +22,41 @@ header nav{
 header nav ul li {
     display: inline;
 }
+
 header nav ul li a{
     text-align: center;
     text-decoration: none;
     color: #fff;
     line-height: 100px;
-    margin: 0px 30px;
-    font-size: 20px;
+    margin: 0 30px;
+    font-size: 1.25rem;
     transition: .2s;
 }
 
-header nav .pic{
+header .pic{
     padding: 10px;
 }
-header nav .pic img {
+header .pic img {
     width: 170px;
     vertical-align: middle;
 }
 
-header nav .shopping-cart a{
+header .shopping-cart a{
     color: #fff;
     line-height: 100px;
-    margin: 0px 10px;
-    font-size: 20px;
+    margin: 0px 40px;
+    font-size: 1.25rem;
 }
 
 header nav ul a:hover,
-header nav .shopping-cart a:hover{
+header .shopping-cart a:hover{
     color: #b28850;
 }
 /* 選單結束 */
-
+/* 漢堡選單 */
+header .burger-container{
+    display: none;
+}
 /* 立即訂位開始 */
 .booking-btn{
     position: fixed;
@@ -76,7 +80,7 @@ header nav .shopping-cart a:hover{
 }
 
 .booking-btn a:hover{
-    font-size: 18px;
+    font-size: 1.2rem;
 }
 @keyframes booking{
     0%{
@@ -193,7 +197,7 @@ footer .footer-pic p{
     color: #fff;
     line-height: 120px;
     margin: 0px 10px;
-    font-size: 20px;
+    font-size: 1.25rem;
     transition: .2s;
 }
 
@@ -203,7 +207,7 @@ footer .footer-pic p{
 
 .footer-icon {
     width: 18%;
-    margin: 10px 0;
+    margin: 10px 10px;
     position: relative;
     top: 20px;
     bottom: 20px;
@@ -212,22 +216,24 @@ footer .footer-pic p{
 
 .footer-icon span {
     color: #fff;
-    font-size: 16px;
+    font-size: 1rem;
     position: absolute;
-    right: 85px;
-    bottom: 120px;
+    right: 35%;
+    bottom: 80%;
 }
 
 .footer-icon .facebook {
     position: relative;
     bottom: 5px;
-    font-size: 25px;
+    font-size: 1.5rem;
+    transition: .2s;
 }
 
 .footer-icon .instagram {
     position: relative;
     top: 10px;
-    font-size: 25px;
+    font-size: 1.5rem;
+    transition: .2s;
 }
 
 .warning-box {
@@ -249,12 +255,12 @@ footer .footer-pic p{
 }
 
 .warning-box .tibame {
-    font-size: 14px;
+    font-size: 1rem;
     width: 20%;
 }
 
 .warning-box .drink {
-    font-size: 50px;
+    font-size: 3rem;
     line-height: 1.25;
     text-align: center;
 }
@@ -269,6 +275,7 @@ footer .footer-pic p{
 .footer a:hover,
 .footer-icon a:hover{
     color: #b28850;
+    transition: .2s;
 }
 
 .footer-icon a {
@@ -276,52 +283,61 @@ footer .footer-pic p{
 }
 
 /* RWD */
-@media screen and (max-width:768px) {
-*{
-    overflow-x: hidden;
-}
+@media screen and (max-width:767px) {
+    *{
+        overflow-x: hidden;
+    }
 
-header nav ul{
-    display: none;
-}
-header nav .pic{
-    width: 50%;
-}
+    header{
+        position: relative;
+    }
 
-.marquee{
-    width: max-content;
-    /* height: max-content; */
-}
+    header nav ul{
+        display: none;
+    }
 
-footer{
-    height: 28vh;
-}
+    header nav .pic{
+        width: 50%;
+    }
 
-footer .footer-pic p{
-    display: block;
-}
+    .marquee{
+        width: max-content;
+    }
 
-footer .footer-pic{
-    width: 100%;
-}
+    footer{
+        height: 28vh;
+    }
 
-footer .footer-pic img{
-    margin: 0 auto;
-}
+    footer .footer-pic p{
+        display: block;
+    }
 
-.footer ul li,.footer-icon{
-    display: none;
-}
+    footer .footer-pic{
+        width: 100%;
+    }
 
-.warning-box{
-    max-width: 100%;
-}
+    footer .footer-pic img{
+        margin: 0 auto;
+    }
 
-.warning-box .drink {
-    padding: 5px;
-    font-size: 20px;
-}
-.warning-box .tibame {
-    display: none;
-} 
+    .footer ul li,.footer-icon{
+        display: none;
+    }
+
+    .warning-box{
+        max-width: 100%;
+    }
+
+    .warning-box .drink {
+        padding: 5px;
+        font-size: 1.25rem;
+    }
+    .warning-box .tibame {
+        display: none;
+    } 
+
+    /* 漢堡選單 */
+    header .burger-container{
+        display: block;
+    }
 }
