--- a/styles/booking.css
+++ b/styles/booking.css
@@ -1,4 +1,5 @@
     /* 地址區開始 */
+
 article {
     max-width: 1200px;
     margin: 0 auto 30px;
@@ -10,15 +11,17 @@ article {
 article h1 {
     max-width: 100%;
     color: #FFF;
-    font-size: 100px;
+    font-size: 6.25rem;
     letter-spacing: 5px;
     text-align: center;
     margin: 50px 0 30px 0;
     text-shadow: 15px 15px 10px #000;
 }
+
 article section {
     max-width: 50%;
 }
+
 article section .miuking,
 article section .miuqueen {
     max-width: 90%;
@@ -34,7 +37,7 @@ article section .miuqueen .pic img {
 article section .miuking h2,
 article section .miuqueen h2 {
     color: #fff;
-    font-size: 22px;
+    font-size: 1.3rem;
     letter-spacing: 1px;
     display: inline;
     text-shadow: 3px 3px 10px #000;
@@ -48,21 +51,23 @@ article section .miuqueen h2::after {
 article section .miuking address,
 article section .miuqueen address {
     color: #fff;
-    font-size: 18px;
+    font-size: 1.1rem;
     line-height: 2;
     letter-spacing: 1px;
     margin: 5px 10px;
     display: inline;
 }
+
 /* 地址區結束 */
 /* 表單區開始 */
+
 article .booking {
     color: #fff;
-    font-size: 18px;
+    font-size: 1.1rem;
     background-color: #b28850;
     border-radius: 6px;
     margin: 5% 0 2% 0;
-    padding: 25px;
+    padding: 2%;
     display: flex;
     flex-flow: column wrap;
     justify-content: space-evenly;
@@ -75,7 +80,7 @@ article .booking div label span{
 
 article .booking input,
 article .booking textarea{         
-    width: 95%;
+    min-width: 95%;
     padding: 5px;
     border: 0px;
     border-radius: 5px;
@@ -102,52 +107,71 @@ article .booking button {
 article .booking button span {
     color: #333;
 }
+
 /* 表單區結束 */
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:767px) {
 
     article h1 {
         padding: 20px;
-        font-size: 48px;
+        font-size: 3rem;
         margin: 10px 0;
     }
     
     article section {
-        max-width: 80%;
+        max-width: 100%;
+        margin: 10px;
     }
 
     article section .miuking h2,
     article section .miuqueen h2{
-    font-size: 22px;
-    letter-spacing: 0px;
-    padding: 5px 0;
+        font-size: 1.5rem;
+        letter-spacing: 0px;
+        padding: 5px 0;
     }
 
     article section .miuking h2::after,
     article section .miuqueen h2::after {
-    display: none;
+        display: none;
     }
 
     article section .miuking address,
     article section .miuqueen address {
-    color: #fff;
-    font-size: 16px;
-    padding: 5px 10px;
-    white-space: pre-line;
+        color: #fff;
+        font-size: 1rem;
+        padding: 5px 10px;
+        white-space: pre-line;
+        margin: 0 10px;
     }
 
     article section .miuking,
     article section .miuqueen {
-    max-width: 100%;
+        max-width: 100%;
+    }
+
+    article .booking {
+        margin: 5% 2% 2%;
     }
 
     article .booking div label span{
-    display: block;
-    padding: 10px 0;
+        display: block;
+        padding: 10px 0;
+    }
+
+    article .booking input,
+    article .booking textarea{         
+        width: 95%;
+        padding: 5px;
+        border: 0px;
+        border-radius: 5px;
+        margin: 5px 0;
+    }
+
+    article .booking select {
+        margin: 5px 0;
     }
 
     article .booking button{
-    margin-top: 10px;
+        margin-top: 10px;
     }
 }
-
