--- a/styles/food.css
+++ b/styles/food.css
@@ -1,7 +1,7 @@
 h1 {
     width: 100%;
     color: #FFF;
-    font-size: 100px;
+    font-size: 6.25rem;
     letter-spacing: 5px;
     text-align: center;
     margin: 50px 0;
@@ -71,7 +71,7 @@ h1 {
 }
 
 .classic-beer .title .txt{
-    font-size: 22px;
+    font-size: 1.3rem;
     text-align: center;
     position: absolute;
     margin: auto;
@@ -122,7 +122,7 @@ h1 {
 
 .classic-beer .beer-container .beer .name{
     color: #fff;
-    font-size: 20px;
+    font-size: 1.25rem;
     padding: 10px;
     margin-top: 10px;
     text-align: center;
@@ -130,7 +130,7 @@ h1 {
 
 .classic-beer .beer-container .beer .txt i{
     text-align: left;
-    font-size: 25px;
+    font-size: 1.5rem;
     border-radius: 10px;
     opacity: 0;
     transition: .5s;
@@ -139,14 +139,14 @@ h1 {
 .classic-beer .beer-container .beer .txt h3{
     display: inline-block;
     color: #fff;
-    font-size: 20px;
+    font-size: 1.25rem;
     transition: .3s;
 }
 
 .classic-beer .beer-container .beer .txt p{
     text-align: right;
     color: #fff;
-    font-size: 17px;
+    font-size: 1rem;
     margin: 10px;
     padding-top: 40px;
     transition: .3s;
@@ -185,7 +185,7 @@ h1 {
 }
 
 .delicious-food .title .txt{
-    font-size: 22px;
+    font-size: 1.3rem;
     text-align: center;
     position: absolute;
     margin: auto;
@@ -213,7 +213,7 @@ h1 {
 }
 
 .delicious-food .btn a{
-    font-size: 14px;
+    font-size: 1rem;
     display: block;
     text-align: center;
     text-decoration: none;
@@ -289,7 +289,7 @@ h1 {
     top: 85%;
     background-color: #0008;
     padding: 15px 0 15px;
-    font-size: 22px;
+    font-size: 1.3rem;
     text-align: center;
     color: #fff;
 }
@@ -334,18 +334,18 @@ h1 {
 
 .menu-box .menu .pageone ul li,
 .menu-box .menu .pagetwo ul li{
-    font-size: 22px;
+    font-size: 1.3rem;
     padding:20px 0 10px 20px;
 }
 
 .menu-box .menu .pageone ul li span,
 .menu-box .menu .pagetwo ul li span{
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .menu-box .menu .pageone ul li i,
 .menu-box .menu .pagetwo ul li i{
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 2.5;
     padding-left: 20px;
 }
