--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 /* 選單 */
-header nav{
+/* header nav{
     background-image: url('../images/footer_two.png');
     background-size: cover;
     padding: 0px 30px;
@@ -17,7 +17,7 @@ header nav ul li a{
     color: #fff;
     line-height: 100px;
     margin: 0px 30px;
-    font-size: 20px;
+    font-size: 1.25rem;
     transition: .2s;
 }
 
@@ -34,13 +34,13 @@ header nav .shopping-cart a{
     color: #fff;
     line-height: 100px;
     margin: 0px 10px;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 header nav ul a:hover,
 header nav .shopping-cart a:hover{
     color: #b28850;
-}
+} */
 /* 選單結束 */
 
 /* 首頁banner開始 */
@@ -60,7 +60,7 @@ header nav .shopping-cart a:hover{
 
 .top .top-banner-txt{
     color: #fff;
-    font-size: 36px;
+    font-size: 2.25rem;
     letter-spacing: 4px;
     text-align:center;
     position: absolute;
@@ -81,7 +81,7 @@ header nav .shopping-cart a:hover{
     color: #B28850;
     margin: 50px 0;
     text-align: center;
-    font-size: 28px;
+    font-size: 1.75rem;
     letter-spacing: 10px;
     text-shadow: 3px 3px 10px #000;
 }
@@ -199,7 +199,7 @@ header nav .shopping-cart a:hover{
     color: #B28850;
     margin: 50px 0;
     text-align: center;
-    font-size: 28px;
+    font-size: 1.75rem;
     letter-spacing: 10px;
     text-shadow: 3px 3px 10px #000;
 }
@@ -222,7 +222,7 @@ header nav .shopping-cart a:hover{
     color: #B28850;
     margin: 50px 0;
     text-align: center;
-    font-size: 28px;
+    font-size: 1.75rem;
     letter-spacing: 10px;
     text-shadow: 3px 3px 10px #000;
 }
@@ -309,13 +309,13 @@ header nav .shopping-cart a:hover{
 }
 
 .brewery .txt{
-    max-width: 800px;
+    max-width: 70%;
     margin: auto;
     padding: 20px 30px;
 }
 
 .brewery .txt h2{
-    font-size: 28px;
+    font-size: 1.75rem;
     color: #333;
     line-height: 2;
     border-top: 3px solid #333;
@@ -324,7 +324,7 @@ header nav .shopping-cart a:hover{
 
 .brewery .txt p{
     color: #333;
-    font-size: 18px;
+    font-size: 1.1rem;
     line-height: 2;
     margin: 25px 0;
 }
@@ -335,7 +335,7 @@ header nav .shopping-cart a:hover{
 .brewery .txt .link a{
     text-decoration: none;
     color: #333;
-    font-size: 16px;
+    font-size: 1rem;
     transition: .2s;
     align-self: flex-end;
 }
@@ -356,7 +356,7 @@ header nav .shopping-cart a:hover{
     color: #B28850;
     margin: 20px 0;
     text-align: center;
-    font-size: 28px;
+    font-size: 1.75rem;
     letter-spacing: 10px;
     text-shadow: 3px 3px 10px #000;
 }
@@ -381,16 +381,16 @@ header nav .shopping-cart a:hover{
 		left: 0px;
 	}
 	20%{
-		left: -315px;
+		left: -314px;
 	}
 	50%{
-		left: -630px;
+		left: -625px;
 	}
 	70%{
-		left: -945px;
+		left: -935px;
 	}
 	90%{
-		left: -1250px;
+		left: -1245px;
 	}  
 }
 
@@ -400,12 +400,12 @@ header nav .shopping-cart a:hover{
     height: 300px;
     margin: 0 5px;
     border-radius: 2%;
-    border: 5px solid #b28850;
+    border: 2px solid #b28850;
 }
 
 .feedback-card .txt{
     color: #fff;
-    font-size: 20px;
+    font-size: 1.25rem;
     padding: 5px 10px;
     line-height: 1.5;
     text-align: center;
@@ -419,7 +419,7 @@ header nav .shopping-cart a:hover{
 .feedback-card .tag{
     width: 280px;
     height: 15px;
-    font-size: 14px;
+    font-size: 1rem;
     color: #fff;
     text-align: right;
     padding: 5px;
@@ -435,14 +435,14 @@ header nav .shopping-cart a:hover{
     }
     
     .top .top-banner-txt{
-    font-size: 28px;
+    font-size: 1.75rem;
     line-height: 1.5;
     }
 
     .news h1,
     .food h2,
     .feedback h2{
-        font-size: 26px;
+        font-size: 1.6rem;
         margin: 50px 0 20px ;
         padding: 5px;
     }
@@ -461,39 +461,35 @@ header nav .shopping-cart a:hover{
     }
 
     .brewery .txt{
-        font-size: 18px;
+        font-size: 1.1rem;
     }
 
     .brewery .txt .link{
-        font-size: 14px;
+        font-size: 1rem;
         padding: 5px;
-    }
-
-    .brewery .txt p:nth-child(2),
-    .brewery .txt p:nth-child(3),
-    .brewery .txt p:nth-child(4){
-        display: none;
     }
 }
 
 @media screen and (max-width:1024px){
+
     .top{
         height: 50vh;
     }
+
     .top-mask{
         height: 50vh;
     }
     
     .top .top-banner-txt{
-    font-size: 28px;
+    font-size: 1.75rem;
     line-height: 1.5;
     }
 
     .news h1,
     .food h2,
     .feedback h2{
-        font-size: 26px;
-        margin: 50px 0 20px ;
+        font-size: 1.6rem;
+        margin: 20px 0;
         padding: 5px;
     }
 
@@ -506,7 +502,7 @@ header nav .shopping-cart a:hover{
 
     .brewery .pic{
         min-width: 80%;
-        padding-top: 10px;
+        padding-top: 0px;
         align-self: center;
     }
 
@@ -515,16 +511,15 @@ header nav .shopping-cart a:hover{
     }
 
     .brewery .txt .link{
-        font-size: 14px;
+        font-size: 1rem;
         padding: 5px;
     }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:767px) {
     /* 首頁banner */
     .top{
         height: 30vh;
-        /* overflow: hidden; */
     }
 
     .top-mask{
@@ -532,7 +527,7 @@ header nav .shopping-cart a:hover{
     }
 
     .top .top-banner-txt{
-        font-size: 20px;
+        font-size: 1.25rem;
         line-height: 1.5;
         height: fit-content;
     }
@@ -540,16 +535,15 @@ header nav .shopping-cart a:hover{
     .news h1,
     .food h2,
     .feedback h2{
-        font-size: 25px;
-        margin: 20px;
+        font-size: 1.5rem;
+        margin: 10px;
         padding: 5px;
         height: fit-content;
     }
 
-.draft-beer, 
-.draft-beer h2,
-.draft-beer-video
-    {
+    .draft-beer, 
+    .draft-beer h2,
+    .draft-beer-video{
         display: none;
     }
 
@@ -562,22 +556,16 @@ header nav .shopping-cart a:hover{
 
     .brewery .pic{
         min-width: 80%;
-        padding-top: 10px;
+        padding-top: 0px;
         align-self: center;
     }
 
     .brewery .txt{
-        font-size: 18px;
+        font-size: 1.1rem;
     }
 
     .brewery .txt .link{
-        font-size: 14px;
+        font-size: 1rem;
         padding: 5px;
-    }
-
-    .brewery .txt p:nth-child(2),
-    .brewery .txt p:nth-child(3),
-    .brewery .txt p:nth-child(4){
-        display: none;
     }
 } 
