--- a/styles/location.css
+++ b/styles/location.css
@@ -5,7 +5,7 @@ article{
 
 article h1{
     color: #FFF;
-    font-size: 100px;
+    font-size: 6.25rem;
     font-weight:bloder;
     letter-spacing: 5px;
     text-align: center;
@@ -48,7 +48,7 @@ article h1{
 .miuking .txt h2,
 .miuqueen .txt h2{
     color: #fff;
-    font-size: 28px;
+    font-size: 1.75rem;
     letter-spacing: 2px;
     margin: 15px 0 30px 10px;
     text-shadow: 3px 3px 10px #000;
@@ -56,7 +56,7 @@ article h1{
 
 .miuking .txt address,
 .miuqueen .txt address{
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 2;
     letter-spacing: 1px;
     margin: 5px 10px;
@@ -72,10 +72,10 @@ article h1{
 
     /* 地址區結束 */
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:767px) {
     article h1 {
     padding: 20px;
-    font-size: 48px;
+    font-size: 3rem;
     margin: 10px 0;
     }
     .miuking,
