--- a/styles/news.css
+++ b/styles/news.css
@@ -6,7 +6,7 @@
     
 .top h1{
     color: #FFF;
-    font-size: 100px;
+    font-size: 6.25rem;
     font-weight:bloder;
     letter-spacing: 5px;
     text-align: center;
@@ -34,7 +34,7 @@
 }
 
 .news-card a{
-    font-size: 18px;
+    font-size: 1.1rem;
     line-height: 1.5;
     margin: auto;
     text-decoration: none;
@@ -56,6 +56,10 @@
 
 .news-card:hover a span{
     color: #ffe75f;
+}
+
+.news-card a span:nth-child(3){
+    display: none;
 }
 
 .news-card:hover{
@@ -92,17 +96,59 @@
     color: #fe0;
     padding: 2px;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 1.1rem;
     text-align: center;
 }
-    /* 卡片區結束 */
+
+/* 彈窗 */
+.box {
+    display: none;
+    position: fixed;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0008;
+    justify-content: center;
+    align-items: center;
+}
+
+.box .box-content {
+    width: 30%;
+    line-height: 1.5;
+    background-color: #C3C3D6;
+    padding: 3%;
+    border-radius: 6px;
+    box-shadow: 0 2px 10px #000;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.box .close-box{
+    background-color: transparent;
+    color: #fff;
+    width: 50px;
+    padding: 5px;
+    border: 0;
+    border-radius: 6px;
+    font-size: 1rem;
+    text-align: center;
+    position: absolute;
+    top: 63%;
+    right: 49%;
+    cursor: pointer;
+}
+
+/* 卡片區結束 */
 
 
 /* RWD */
-@media screen and (max-width:768px) {
+@media screen and (max-width:767px) {
     .top h1 {
         padding: 20px;
-        font-size: 48px;
+        font-size: 3rem;
         margin: 10px 0;
         }
 
@@ -118,7 +164,7 @@
     }
 
     .news-card a{
-        font-size: 18px;
+        font-size: 1.1rem;
         line-height: 1.25;
         margin: auto;
         text-decoration: none;
