--- a/styles/takeout.css
+++ b/styles/takeout.css
@@ -1,12 +1,43 @@
-/* 內容區開始 */
-.banner{
-    margin-bottom: 30px;
-}
-.banner .pic img{
-    max-width: 100%;
-    vertical-align: top;
+/* 輪播圖區 */
+.image{
+	width: 100%;
+	height: 500px;
 }
 
+#sliderBoard{ 
+	width: 60%;
+	height: 550px;
+	margin: auto;
+	overflow: hidden;
+}
+
+#content{  
+	position: relative;  
+}
+
+#content li{ 
+	float: left;
+}
+
+#contentButton{
+	text-align: center;
+	width: 100%;
+}
+
+#contentButton li{
+	width: 15px;
+	height: 15px;
+	border-radius: 50%;
+	background-color: #ccc;
+	display: inline-block;
+	margin: 8px;
+}
+
+#contentButton .clicked{
+	background-color: #666;
+}
+/* 輪播圖區結束 */
+/* 內容區開始 */
 .description{
     max-width: 50%;
     padding: 20px;
@@ -23,7 +54,13 @@
 .description a{
     text-decoration: none;
     color: #b28850;
-    font-size: 18px;
+    font-size: 1.1rem;
+}
+
+.description a:hover{
+    color: #FFE75F;
+    text-shadow: 3px 3px 10px #000;
+    transition: .3s;
 }
 
 .food-card-container{
@@ -58,7 +95,7 @@
     color: #333;
     font-weight: bold;
     margin-bottom: 3px;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 .food-card-container .card .txt span{
@@ -86,20 +123,19 @@
 
 .next-btn{
     display: block;
+    font-size: 1rem;
+    color: #333;
     background-color: #b28850;
-    min-width: 40px;
-    padding: 10px;
-    margin-top: 20px;
-    border-radius: 5px;
-    box-shadow: 3px 3px 3px #000;
     text-align: center;
     text-decoration: none;
-    color: #333;
-    font-size: 16px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px #000;
+    padding: 10px;
+    margin: 2%;
 }
 
 /* RWD */
-@media screen and (max-width:768px) {
+@media screen and (max-width:1024px){
     .description{
         width: 80%;
         padding: 5px;
@@ -113,7 +149,7 @@
     }
     
     .description a{
-        font-size: 16px;
+        font-size: 1rem;
     }
 
     .food-card-container{
@@ -141,7 +177,7 @@
     .food-card-container .card .txt h2{
         text-align: center;
         padding-bottom: 5px;
-        font-size: 16px;
+        font-size: 1rem;
     }
     
     .food-card-container .card .txt span{
@@ -151,7 +187,7 @@
     .food-card-container .card .btn .fa-dollar-sign span{
         padding-left: 5px;
         letter-spacing: 1.5px;
-        font-size: 14px;
+        font-size: 1rem;
         margin-bottom: 5px;
     }
     
@@ -162,8 +198,77 @@
     }
 
     .next-btn{
-        width: 40px;
+        font-size: 1rem;
         padding: 10px;
-        font-size: 14px;
+        margin: 2.5% 20% 0;
+    }
+}
+
+@media screen and (max-width:767px) {
+    .description{
+        width: 80%;
+        padding: 5px;
+    }
+
+    .description p{
+        color: #fff;
+        text-align: left;
+        padding: 4px;
+        line-height: 1.25;
+    }
+    
+    .description a{
+        font-size: 1rem;
+    }
+
+    .food-card-container{
+        width: 100%;
+        margin: 20px auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        padding: 0;
+    }
+    
+    .food-card-container .card{
+        width: 40%;
+        box-sizing: border-box;
+        background-color: #C3C3D6;
+        border-radius: 15px;
+        margin: 5px;
+    }
+    
+    .food-card-container .card .txt{
+        margin: 10px;
+        border-bottom: 1px solid #555;
+    }
+    
+    .food-card-container .card .txt h2{
+        text-align: center;
+        padding-bottom: 5px;
+        font-size: 1rem;
+    }
+    
+    .food-card-container .card .txt span{
+        display: none;
+    }
+
+    .food-card-container .card .btn .fa-dollar-sign span{
+        padding-left: 5px;
+        letter-spacing: 1.5px;
+        font-size: 1rem;
+        margin-bottom: 5px;
+    }
+    
+    .food-card-container .card .btn .count span{
+        margin: 0px;
+        padding: 10px;
+        letter-spacing: 0px;
+    }
+
+    .next-btn{
+        font-size: 1rem;
+        padding: 10px;
+        margin: 2.5% 5% 0;
     }
 }
