--- a/styles/news.css
+++ b/styles/news.css
@@ -175,4 +175,24 @@
         bottom: 17%;
     }
 
+    /* 彈窗 */
+    .box {
+        display: none;
+        position: fixed;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #0008;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .box .box-content {
+        width: 65%;
+    }
+
+    .box .close-box{
+        top: 63%;
+        right: 45%;
+    }
 }
