--- a/styles/food.css
+++ b/styles/food.css
@@ -56,7 +56,7 @@ h1 {
 
 .classic-beer{
     margin: 30px auto;
-    width: 1200px;
+    max-width: 1200px;
 }
 
 .classic-beer .title{
@@ -91,20 +91,22 @@ h1 {
 }
 
 .classic-beer .beer-container{
+    max-width: 100%;
     margin: auto;
     display: flex;
     justify-content: space-evenly;
 }
 
-.classic-beer .beer-container .beer .pic img{
-    width: 150px;
-    height: 400px;
-    vertical-align: middle;
-    transition: 1.5s;
-}
-
 .classic-beer .beer-container .beer{
     position: relative;
+}
+
+.classic-beer .beer-container .beer .pic img{
+    max-width: 100%;
+    /* width: 150px; */
+    /* height: 400px; */
+    vertical-align: middle;
+    transition: 1.5s;
 }
 
 .classic-beer .beer-container .beer .txt{
@@ -167,6 +169,21 @@ h1 {
     writing-mode: horizontal-tb;
 }
 
+
+/* beer按鈕 */
+.beer-btn{
+    display: none;
+    max-width: 100%;
+    text-align: center;
+    margin: 2.5% 0 0;
+    color: #b28850;
+}
+.beer-btn i{
+    display: inline-block;
+    margin: 0 3%;
+    font-size: 1.25rem;
+}
+
 /* 美味料理區 */
 
 .delicious-food{
@@ -174,7 +191,7 @@ h1 {
 }
 
 .delicious-food .title{
-    width: 300px;
+    max-width: 300px;
     margin: 0 auto;
     position: relative;
 }
@@ -206,7 +223,7 @@ h1 {
 
 .delicious-food .btn{
     border: 2px solid #b28850;
-    width: 60px;
+    max-width: 5%;
     padding: 10px;
     margin: 10px auto 20px;
     border-radius: 5px;
@@ -219,6 +236,51 @@ h1 {
     text-decoration: none;
     color: #b28850;
 }
+
+/* 手機版菜單 */
+.delicious-food .phonemenubtn{
+    border: 2px solid #b28850;
+    max-width: 30%;
+    padding: 10px;
+    margin: 10px auto 20px;
+    border-radius: 5px;
+    display: none;
+}
+
+.delicious-food .phonemenubtn a{
+    font-size: 1rem;
+    padding: 2%;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    color: #b28850;
+}
+
+.delicious-food .phonemenubtn span{
+    display: none;
+}
+
+/* 手機菜單彈窗 */
+    .delicious-food .box {
+        display: none;
+        position: fixed;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #0008;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .delicious-food .box .box-content {
+        width: 65%;
+    }
+
+    .delicious-food .box .close-box{
+        top: 50%;
+        right: 50%;
+    }
+/* 手機版菜單結束 */
 
 .delicious-food .btn:hover{
     background-color: #000;
@@ -372,3 +434,141 @@ h1 {
     transition: 1.5s;
 }
 
+
+
+@media screen and (max-width:1024px) {
+    h1 {
+        padding: 20px;
+        font-size: 3rem;
+        margin: 10px 0;
+    }
+
+        /* 經典啤酒區 */
+    .classic-beer .title .pic img{
+        display: none;
+    }
+    /* 美味料理 */
+
+    .delicious-food .title .pic img,
+    .delicious-food .title .txt,
+    .delicious-food .title .tag span,
+    .delicious-food .menu-box{
+        display: none;
+    }
+
+    .delicious-food .btn{
+        border: 2px solid #b28850;
+        max-width: 30%;
+        padding: 10px;
+        margin: 10px auto 20px;
+        border-radius: 5px;
+    }
+    
+    .delicious-food .btn a{
+        font-size: 1rem;
+        padding: 2%;
+        display: block;
+        text-align: center;
+        text-decoration: none;
+        color: #b28850;
+    }
+
+    .delicious-food .phonemenubtn{
+        display: block;
+    }
+    
+     /* beer按鈕 */
+    .beer-btn{
+        display: block;
+        max-width: 100%;
+        text-align: center;
+        margin: 1.5% 2.5% 0;
+        padding: 2%;
+        color: #b28850;
+    }
+    .beer-btn i{
+        display: inline-block;
+        margin: 0 5%;
+        font-size: 1.25rem;
+    }
+    
+}
+@media screen and (max-width:767px) {
+
+    h1 {
+        padding: 20px;
+        font-size: 3rem;
+        margin: 10px 0;
+    }
+    
+    /* 經典啤酒區 */
+    .classic-beer .title .pic img{
+        display: none;
+    }
+    /* 美味料理 */
+
+    .delicious-food .title .pic img,
+    .delicious-food .title .txt,
+    .delicious-food .title .tag span,
+    .delicious-food .menu-box{
+        display: none;
+    }
+
+    .delicious-food .btn{
+        border: 2px solid #b28850;
+        max-width: 30%;
+        padding: 10px;
+        margin: 10px auto 20px;
+        border-radius: 5px;
+    }
+    
+    .delicious-food .btn a{
+        font-size: 1rem;
+        padding: 2%;
+        display: block;
+        text-align: center;
+        text-decoration: none;
+        color: #b28850;
+    }
+
+    .delicious-food .phonemenubtn{
+        display: block;
+    }
+
+    /* beer按鈕 */
+    .beer-btn{
+        display: block;
+        max-width: 100%;
+        text-align: center;
+        margin: 1.5% 2.5% 0;
+        padding: 2%;
+        color: #b28850;
+    }
+    .beer-btn i{
+        display: inline-block;
+        margin: 0 5%;
+        font-size: 1.25rem;
+    }
+
+    /* 手機菜單彈窗 */
+    .delicious-food .box {
+        display: none;
+        position: fixed;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #0008;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .delicious-food .box .box-content {
+        width: 20%;
+    }
+
+    .delicious-food .box .close-box{
+        top: 60%;
+        right: 45%;
+    }
+
+}
