--- a/styles/food.css
+++ b/styles/food.css
@@ -7,49 +7,15 @@ h1 {
     margin: 50px 0;
     text-shadow: 15px 15px 10px #000;
 }
-/* 圖片跑馬燈區 */
-.picmarquee{
-    width: 100%;
-    padding: 50px 0;
-    margin: auto;
-}
 
-.picmarquee .view{
-    width: 100%;
-    overflow: hidden;
-    background-color: #0008;
 
-}
-
-.picmarquee .view .pic-container{
-    width: 1200px;
-    margin: auto;
-    display: flex;
-}
-
-.picmarquee .view .pic-container{
-    animation: marquee 20s -1s infinite linear;
-}
-
-.picmarquee .view .pic-container .pic{
-    width: 300px;
-    margin: 0 5px;
-    border: 3px solid #b28850;
-}
-
-.picmarquee .view .pic-container .pic img{
-    width: 300px;
-    height: 200px;
-    vertical-align: middle;
-}
-
-@keyframes marquee {
-    0%{
-        transform: translateX(0%);
-    }
-    100%{
-        transform: translateX(-100%);
-    }
+/* 啤酒分隔線 */
+.little{
+    max-width: 100%;
+    margin: 3% auto;
+    padding: 60px;
+    background-image: url(../images/about_littlebeer.png);
+    background-repeat: repeat-x;
 }
 
 /* 經典啤酒區 */
@@ -223,10 +189,11 @@ h1 {
 
 .delicious-food .btn{
     border: 2px solid #b28850;
-    max-width: 30%;
+    max-width: 4%;
     padding: 10px;
     margin: 10px auto 20px;
     border-radius: 5px;
+    transition: .5s;
 }
 
 .delicious-food .btn a{
@@ -235,6 +202,7 @@ h1 {
     text-align: center;
     text-decoration: none;
     color: #b28850;
+    transition: .5s;
 }
 
 /* 手機版菜單 */
@@ -271,12 +239,14 @@ h1 {
         background-color: #0008;
         justify-content: center;
         align-items: center;
+        z-index: 1;
     }
 
     .delicious-food .box .box-content {
         width: 100%;
         line-height: 1.5;
-        background-color: #C3C3D6;
+        background-image: url(../images/menu_bg.png);
+        background-size: cover;
         padding: 3%;
         border-radius: 6px;
         box-shadow: 0 2px 10px #000;
@@ -285,6 +255,11 @@ h1 {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        z-index: 1;
+    }
+
+    .delicious-food .box .box-content p:first-child{
+        font-size: 1.2rem;
     }
 
     .delicious-food .box .close-box{
@@ -300,6 +275,7 @@ h1 {
         top: 70%;
         right: 49%;
         cursor: pointer;
+        z-index: 1;
     }
 /* 手機版菜單結束 */
 
@@ -333,9 +309,9 @@ h1 {
     height: 100%;
     position: relative;
     transform: perspective(1200) rotateY(0deg) translateX(0px);
-    transition: 1.5s;
-    backface-visibility:hidden;
+    transition: 3s;
 }
+
 
 .delicious-food .menu-box .menu .front img{
     width: 100%;
@@ -385,11 +361,11 @@ h1 {
     height: 100%;
     position: absolute;
     top: 0;
-    left: 0;
+    left: -95%;
     padding: 10px 0 30px;
     transform: perspective(1200px) rotateY(0deg);
     opacity: 0;
-    transition: 2s;
+    transition: opacity .3s 1.5s ease; 
 }
 
 .menu-box .menu .pagetwo{
@@ -400,7 +376,7 @@ h1 {
     left: 0;
     padding: 10px 0 30px;
     opacity: 0;
-    transition: s;
+    transition: opacity .3s 1s ease; 
 }
 
 .menu-box .menu .pageone img,
@@ -433,28 +409,24 @@ h1 {
     padding-left: 20px;
 }
 
-.menu-box .menu .pageone ul li a{
+.menu-box .menu .pagetwo ul li a{
     color: #333;
     text-decoration: none;
 }
 
 /* 菜單翻面 */
-.menu-box:hover .front{
-    transform: perspective(1200px) rotateY(-180deg) translateX(360px);
-    transition: 2s;
-}
 
-.menu-box:hover .pageone{
-    transform: perspective(1200px) rotateY(-360deg) translateX(-420px);
+.flipped{
+    transform: perspective(1200px) rotateY(-180deg) translateX(420px);
     opacity: 1;
     transition: 1.5s;
 }
 
-.menu-box:hover .pagetwo{
+.closemenu{
+    transform: perspective(1200px) rotateY(180deg) translateX(-420px);
     opacity: 1;
     transition: 1.5s;
 }
-
 
 
 @media screen and (max-width:1024px) {
@@ -464,12 +436,12 @@ h1 {
         margin: 10px 0;
     }
 
-        /* 經典啤酒區 */
-        .classic-beer .title,
-        .classic-beer .title txt,
-        .classic-beer .title .pic img{
-            display: none;
-        }
+    /* 經典啤酒區 */
+    .classic-beer .title,
+    .classic-beer .title txt,
+    .classic-beer .title .pic img{
+        display: none;
+    }
     /* 美味料理 */
 
     .delicious-food .title .pic img,
@@ -532,7 +504,7 @@ h1 {
     }
 
     .delicious-food .box .close-box{
-        top: 74%;
+        top: 83%;
         right: 48%;
     }
 }
@@ -613,8 +585,14 @@ h1 {
     }
 
     .delicious-food .box .close-box{
-        top: 72%;
+        top: 80%;
         right: 45%;
     }
+}
 
+@media screen and (max-width:400px){
+    .delicious-food .box .close-box{
+        top: 73%;
+        right: 45%;
+    }
 }
