--- a/styles/all.css
+++ b/styles/all.css
@@ -284,6 +284,61 @@ footer .footer-pic p{
 }
 
 /* RWD */
+@media screen and (max-width:1024px){
+    *{
+        overflow-x: hidden;
+    }
+
+    header{
+        position: relative;
+    }
+
+    header nav ul{
+        display: none;
+    }
+
+    header nav .pic{
+        width: 50%;
+    }
+
+    footer{
+        height: 22vh;
+    }
+
+    footer .footer-pic p{
+        display: block;
+    }
+
+    footer .footer-pic{
+        width: 100%;
+    }
+
+    footer .footer-pic img{
+        margin: 0 auto;
+    }
+
+    .footer ul li,.footer-icon{
+        display: none;
+    }
+
+    .warning-box{
+        max-width: 100%;
+    }
+
+    .warning-box .drink {
+        padding: 5px;
+        font-size: 1.25rem;
+    }
+    .warning-box .tibame {
+        display: none;
+    } 
+
+    /* 漢堡選單 */
+    header .burger-container{
+        display: block;
+    }
+}
+
 @media screen and (max-width:767px) {
     *{
         overflow-x: hidden;
