--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -1,6 +1,7 @@
 /* 購物車內容區開始 */
 .cart-container{
-    background-color: #d9d9d9;
+    /* background-color: #d9d9d9; */
+    background-color: #C3C3D6;
     margin: 150px auto 10px;
     padding: 30px;
     max-width: 1200px;
@@ -19,6 +20,10 @@
     color: #333;
 }
 
+.cart-container .total span{
+    color: #e00;
+}
+
 .cart-container .fa-cart-shopping {
     min-width: 100%;
     color: #333;
@@ -34,7 +39,6 @@
 }
 
 .btn{
-    color: #b28850;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,16 +46,15 @@
 
 .btn .next{
     display: inline-block;
-    color: #333;
+    color: #fff;
     text-align: center;
     text-decoration: none;
-    background-color:#b28850;
+    background-color:#5E5E90;
     width: 40px;
     padding: 10px;
     margin: 20px;
     border-radius: 5px;
     box-shadow: 3px 3px 10px #000;
-
 }
 
 .btn .back{
@@ -62,62 +65,72 @@
     border-radius: 5px;
     text-align: center;
     text-decoration: none;
-    color: #b28850;
+    color: #fff;
 }
 
-.cart{
+.cart-container .cart{
     width: 600px;
     display: flex;
     flex-wrap: wrap;
 }
 
-.cart .pic{
+.cart-container .cart .pic{
     width: 200px;
     padding: 20px;
 }
 
-.cart .pic img{
+.cart-container .cart .pic img{
     width: 100%;
-    height: 100%;
     vertical-align: middle;
 }
 
-.cart .txt{
+.cart-container .cart .txt{
     width: 300px;
     color:#333;
     padding: 50px 10px;
     font-size: 1.1rem;
 }
 
-.cart .txt h2{
+.cart-container .cart .txt h2{
     font-weight: bold;
 }
 
-.cart .txt .order-btn{
+.cart-container .cart .txt .order-btn{
     width: 200px;
     padding: 30px 0;
     font-size: 1rem;
-    color: #333;
     display: flex;
+    
 }
 
-.cart .txt .order-btn i,
-.cart .txt .order-btn p{
-    margin-right: 40px;
+.cart-container .cart .txt .order-btn i{
+    margin: 10px;
+    color: #666;
+}
+
+.cart-container .cart .txt .order-btn .fa-dollar-sign{
+    color: #e00;
+}
+
+.cart-container .cart .txt .order-btn input{
+    min-width: 20%;
+    text-align: center;
 }
 
 .cart .order-btn p{
     font-size: 1.1rem;
     color: #3C3C5B;
 }
+
+.cart .txt .order-btn span{ /* 餐點單價隱藏 */
+    display: none;
+}
+
 .cart .txt span{
     display: block;
     margin-top: 10px;
 }
-.order-btn .fa-circle-minus,
-.order-btn .fa-trash-can{
-    color: #666;
-}
+
 .order-btn .fa-sack-dollar{
     margin-left: 60%;
 }
@@ -129,14 +142,31 @@
 /* 購物車內容區結束 */
 /* 表單區開始 */
 .cart-container form{
-        width: 350px;
-        color: #333;
-        font-size: 1.1rem;
-        background-color: #d9d9d9;
-        line-height: 2.5;
-        padding: 50px 50px 50px 30px;
-        border-left: 3px solid #999999;
+    width: 350px;
+    color: #333;
+    font-size: 1.1rem;
+    /* background-color: #d9d9d9; */
+    background-color: #C3C3D6;
+    line-height: 2.5;
+    padding: 50px 50px 50px 30px;
+    border-left: 3px solid #999999;
 }
+
+.cart-container form input,
+.cart-container form textarea{         
+    min-width: 95%;
+    padding: 5px;
+    border: 0px;
+    border-radius: 5px;
+}
+
+.cart-container form select {
+    width: 100%;
+    padding: 5px;
+    border: 0px;
+    border-radius: 5px;
+}
+
 /* 表單區結束 */
 
 
@@ -155,38 +185,42 @@
         padding: 5px;
     }
     
-    .cart{
+    .cart-container .cart{
         max-width: 100%;
         justify-content: center;
         align-items: center;
     }
 
-    .cart .pic{
+    .cart-container .cart .pic{
         min-width: 30%;
-        padding: 10px 0 0;
+        padding: 1%;
     }
     
-    .cart .txt{
+    .cart-container .cart .txt{
         max-width: 50%;
         padding: 5px;
     }
     
-    .cart .txt h2{
+    .cart-container .cart .txt h2{
         padding: 5px 17%;
     }
 
-    .cart .txt h2 span{
+    .cart-container .cart .txt h2 span{
         display: none;
     }
 
-    .cart .txt .order-btn{
+    .cart-container .cart .txt .order-btn{
         padding: 0 5%;
     }
     
-    .cart .txt .order-btn i,
-    .cart .txt .order-btn p{
+    .cart-container .cart .txt .order-btn i{
         margin: 5px auto;
         line-height: 1.5;
+    }
+
+    .cart-container .cart .txt .order-btn input{
+        width: 2.5%;
+        text-align: center;
     }
 
     .cart-container form{
@@ -218,12 +252,13 @@
 
     .cart .pic{
         min-width: 22%;
-        padding: 10px 0 0;
+        padding: 0;
     }
     
     .cart .txt{
-        max-width: 50%;
+        min-width: 60%;
         padding: 5px;
+        font-size: 1rem;
     }
     
     .cart .txt h2{
@@ -238,8 +273,7 @@
         padding: 0 5%;
     }
     
-    .cart .txt .order-btn i,
-    .cart .txt .order-btn p{
+    .cart .txt .order-btn i{
         margin: 0 5px;
         padding: 5px 0;
         line-height: 1.5;
