--- a/styles/takeout.css
+++ b/styles/takeout.css
@@ -109,30 +109,36 @@
     display: flex;
     justify-content: space-between;
     margin: 10px;
-    color: #b28850;
+    color: #666;
 }
 
 .food-card-container .card .btn .fa-dollar-sign span{
     padding-left: 5px;
     letter-spacing: 1.5px;
     color: #e00;
+    margin-right: 5px;
 }
 
 .food-card-container .card .btn .count span{
     margin: 0 10px;
 }
 
+.food-card-container .card .btn .count .selectbox{
+    width: 10%;
+    text-align: center;
+}
+
 .next-btn{
-    display: block;
-    font-size: 1rem;
-    color: #333;
-    background-color: #b28850;
+    display: inline-block;
+    color: #fff;
     text-align: center;
     text-decoration: none;
+    background-color: #5E5E90;
+    width: 40px;
+    padding: 10px;
+    margin: 20px;
     border-radius: 5px;
     box-shadow: 3px 3px 3px #000;
-    padding: 10px;
-    margin: 2%;
 }
 
 /* RWD */
