--- a/styles/news.css
+++ b/styles/news.css
@@ -17,9 +17,14 @@
     /* 卡片區開始 */
 .news-card-container{
     max-width: 1200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin: 50px auto;
     content: '';
 }
@@ -27,7 +32,8 @@
 .news-card{
     width: 350px;
     height: 350px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     border: 1px solid #b28850;
     margin: 20px 20px 20px 0;
     position: relative;
@@ -62,7 +68,8 @@
 }
 
 .news-card:hover{
-    box-shadow: 10px 10px 10px #000;
+    -webkit-box-shadow: 10px 10px 10px #000;
+            box-shadow: 10px 10px 10px #000;
 }
 
 .news-card img{
@@ -77,8 +84,11 @@
     position: absolute;
     top: 3%;
     left: -3%;
-    transform: rotate(-45deg);
-    box-shadow: 3px 3px 10px #000;
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    -webkit-box-shadow: 3px 3px 10px #000;
+            box-shadow: 3px 3px 10px #000;
 }
 
 .news-card .hot{
@@ -107,8 +117,12 @@
     width: 100%;
     height: 100%;
     background-color: #0008;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .box .box-content {
@@ -117,12 +131,15 @@
     background-color: #C3C3D6;
     padding: 3%;
     border-radius: 6px;
-    box-shadow: 0 2px 10px #000;
+    -webkit-box-shadow: 0 2px 10px #000;
+            box-shadow: 0 2px 10px #000;
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
 }
 
 .box .close-box{
@@ -149,7 +166,7 @@
         padding: 20px;
         font-size: 3rem;
         margin: 10px 0;
-        }
+    }
 
     .news-card-container{
         min-width: 100%;
@@ -182,8 +199,12 @@
         width: 100%;
         height: 100%;
         background-color: #0008;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
 
     .box .box-content {
