--- a/styles/news.css
+++ b/styles/news.css
@@ -61,6 +61,7 @@
 
 .news-card:hover a span{
     color: #ffe75f;
+    transition: .3s;
 }
 
 .news-card a span:nth-child(3){
@@ -70,6 +71,7 @@
 .news-card:hover{
     -webkit-box-shadow: 10px 10px 10px #000;
             box-shadow: 10px 10px 10px #000;
+            transition: .3s;
 }
 
 .news-card img{
