--- a/styles/takeout.css
+++ b/styles/takeout.css
@@ -1,14 +1,16 @@
 /* 輪播圖區 */
-.images{
-    width: 100%;
-    height: 500px;
+#sliderBoard .content .images{
+    max-width: 100%;
+    height: 350px;
+    vertical-align: middle;
 }
 
 #sliderBoard{ 
-	width: 50%;
-	height: 550px;
+	max-width: 30%;
+	height: 380px;
 	margin: auto;
 	overflow: hidden;
+    border: 3px solid #b28850;
 }
 
 #content{  
@@ -110,7 +112,6 @@
     letter-spacing: 1.5px;
     color: #e00;
     margin-right: 5px;
-    line-height: 1.5;
 }
 
 .food-card-container .card .btn {
@@ -122,14 +123,13 @@
 }
 
 .food-card-container .card .btn .count{
-    text-align: center;
-    width: 35%;
-    line-height: 1.5;
+    text-align: right;
+    min-width: 20%;
     align-self: center;
 }
 
 .food-card-container .card .btn .count .selectbox{
-    width: 30%;
+    max-width: 10%;
     text-align: center;
 }
 
@@ -148,6 +148,16 @@
 
 /* RWD */
 @media screen and (max-width:1024px){
+
+    /* 輪播圖區 */
+    #sliderBoard .content .images{
+        max-width: 30%;
+    }
+    
+    #sliderBoard{ 
+        max-width: 60%;
+    }
+
     .description{
         width: 80%;
         padding: 5px;
@@ -201,17 +211,15 @@
         letter-spacing: 1.5px;
         font-size: 1rem;
         margin-bottom: 5px;
-        line-height: 1.5;
     }
     
     .food-card-container .card .btn .count{
-        text-align: center;
-        width: 40%;
-        line-height: 1.5;
+        text-align: right;
+        min-width: 20%;
     }
     
     .food-card-container .card .btn .count .selectbox{
-        width: 30%;
+        min-width: 10%;
         text-align: center;
     }
 
@@ -223,7 +231,14 @@
 }
 
 @media screen and (max-width:767px) {
+
+    #sliderBoard,
+    #contentButton{ 
+        display: none;
+    }
+
     .description{
+        margin-top: 2%;
         width: 80%;
         padding: 5px;
     }
@@ -276,17 +291,15 @@
         letter-spacing: 1.5px;
         font-size: 1rem;
         margin-bottom: 5px;
-        line-height: 1.5;
     }
     
     .food-card-container .card .btn .count{
-        text-align: center;
-        width: 60%;
-        line-height: 1.5;
+        text-align: right;
+        min-width: 60%;
     }
     
     .food-card-container .card .btn .count .selectbox{
-        width: 35%;
+        min-width: 25%;
         text-align: center;
     }
 
