--- a/styles/all.css
+++ b/styles/all.css
@@ -289,6 +289,10 @@ footer .footer-pic p{
         overflow-x: hidden;
     }
 
+    body *{
+        overflow: hidden;
+    }
+
     header{
         position: relative;
     }
@@ -342,6 +346,10 @@ footer .footer-pic p{
 @media screen and (max-width:767px) {
     *{
         overflow-x: hidden;
+    }
+
+    body *{
+        overflow: hidden;
     }
 
     header{
