--- a/styles/food.css
+++ b/styles/food.css
@@ -444,6 +444,10 @@ h1 {
     .classic-beer .title .pic img{
         display: none;
     }
+
+    .classic-beer .beer-container .beer .txt p{
+        font-size: 0.8rem;
+    }
     /* 美味料理 */
 
     .delicious-food .title .pic img,
@@ -527,6 +531,10 @@ h1 {
     .classic-beer .title txt,
     .classic-beer .title .pic img{
         display: none;
+    }
+
+    .classic-beer .beer-container .beer .txt p{
+        font-size: 0.8rem;
     }
     /* 美味料理 */
 
